--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -4,6 +4,13 @@ on:
     types:
       - opened
   workflow_dispatch:    
+  push:
+    branches:
+      - master
+      - 'dev-*' # ex: dev-new dev-this-is-new
+      - 'feat/**' # ex: feat/new/button
+    paths-ignore:
+      - '.github/workflows/*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
